--- a/docs/_static/nature-plus.css
+++ b/docs/_static/nature-plus.css
@@ -1,9 +1,13 @@
 @import url('nature.css');
 
-a tt.xref {
+/* Use link color for xrefs */
+a tt.xref,
+a code.xref {
     color: #005b81;
 }
 
-h1 a tt.xref {
-    color: black;
+/* Except in headlines */
+h1 a tt.xref,
+h1 a code.xref {
+    color: #212224;
 }
